poll.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
spec:
  rules:
  - host: "poll.dop.io"
    http:
      paths:
      - backend:
          service:
            name: poll
            port:
              number: 80
        path: /
        pathType: Prefix
